# Predicting-Sleep-Quality-Using-Machine-Learning

./: 1 - Steps Exploration and Dataset Creation.ipynb  README.md  pyproject.toml
data/: cleaned_daily_step_data.xlsx  cleaned_merged_df.xlsx  cleaned_sleep_data.xlsx  cleaned_weather_data.xlsx  max_min_scaled.xlsx  merged_data.csv  sleep_data.csv  step_count_updated.csv
data/downloaded_met/: SF_037680_99999_2017.csv  SF_037680_99999_2018.csv  SF_037680_99999_2019.csv  SF_037680_99999_2020.csv  SF_037680_99999_2021.csv  SF_037680_99999_2022.csv
notebooks/: 1 - Merged Cleaning & Exploration.ipynb  1 - Steps Exploration and Dataset Creation.ipynb  1 - Weather Data Exploration and Creation.ipynb  2 - Merging Dataset.ipynb  3 - Merged Cleaning & Exploration.ipynb  3 - models.ipynb
