[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["ab78 <amy.barber@ricardo.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.1"
jupyter = "^1.0.0"
notebook = "^6.4.10"
numpy = "^1.22.3"
seaborn = "^0.11.2"
scikit-learn = "<1.0.0,>=0.20.2"
sklearn = "^0.0"
pandas-profiling = "^3.1.0"
ppscore = "^1.2.0"
xgboost = "^1.6.0"
openpyxl = "^3.0.9"
pycm = "3.5"
astral = "1.2"
lightgbm = "^3.3.2"
catboost = "^1.0.5"
Boruta = "^0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
